// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolveTermTheme, opaque, as it was > an opaque Custom with a failing cursor 1`] = `
{
  "background": "#1a1b26",
  "black": "#717177",
  "blue": "#7aa2f7",
  "cursor": "#20212c",
  "cyan": "#7dcfff",
  "foreground": "#c0caf5",
  "green": "#66676f",
  "magenta": "#bb9af7",
  "red": "#f7768e",
  "selectionBackground": "#20212c55",
  "white": "#a9b1d6",
  "yellow": "#e0af68",
}
`;

exports[`resolveTermTheme, opaque, as it was > every preset 1`] = `
{
  "amber": {
    "background": "#110b02",
    "black": "#736755",
    "blue": "#4aa5f0",
    "brightBlack": "#946e32",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#ffbf5a",
    "brightYellow": "#f0c366",
    "cursor": "#ffbf5a",
    "cyan": "#42b3c2",
    "foreground": "#ffbf5a",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#ffbf5a55",
    "white": "#d49f4a",
    "yellow": "#d1a54b",
  },
  "blossom": {
    "background": "#fbeef2",
    "black": "#91858b",
    "blue": "#3f8ccb",
    "brightBlack": "#917e87",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#3b2230",
    "brightYellow": "#9e8143",
    "cursor": "#c64a78",
    "cyan": "#3898a4",
    "foreground": "#3b2230",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#c64a7855",
    "white": "#5e4753",
    "yellow": "#a3813a",
  },
  "butter": {
    "background": "#fbf5d8",
    "black": "#918e79",
    "blue": "#3f8ccb",
    "brightBlack": "#918a73",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#3a3320",
    "brightYellow": "#9e8143",
    "cursor": "#9a7300",
    "cyan": "#3898a4",
    "foreground": "#3a3320",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#9a730055",
    "white": "#5d5641",
    "yellow": "#a3813a",
  },
  "campbell": {
    "background": "#0c0c0c",
    "black": "#5e5e5e",
    "blue": "#2756e0",
    "brightBlack": "#767676",
    "brightBlue": "#3b78ff",
    "brightCyan": "#61d6d6",
    "brightGreen": "#16c60c",
    "brightMagenta": "#b4009e",
    "brightRed": "#e74856",
    "brightWhite": "#f2f2f2",
    "brightYellow": "#f9f1a5",
    "cursor": "#ffffff",
    "cyan": "#3a96dd",
    "foreground": "#cccccc",
    "green": "#13a10e",
    "magenta": "#9b3ba8",
    "red": "#c50f1f",
    "selectionBackground": "#ffffff55",
    "white": "#cccccc",
    "yellow": "#c19c00",
  },
  "catppuccin-latte": {
    "background": "#eff1f5",
    "black": "#5c5f77",
    "blue": "#1e66f5",
    "brightBlack": "#6c6f85",
    "brightBlue": "#1e66f5",
    "brightCyan": "#179299",
    "brightGreen": "#3b9328",
    "brightMagenta": "#c664ac",
    "brightRed": "#d20f39",
    "brightWhite": "#868a92",
    "brightYellow": "#bd7919",
    "cursor": "#8839ef",
    "cyan": "#179299",
    "foreground": "#4c4f69",
    "green": "#3b9328",
    "magenta": "#c664ac",
    "red": "#d20f39",
    "selectionBackground": "#8839ef55",
    "white": "#858994",
    "yellow": "#bd7919",
  },
  "catppuccin-mocha": {
    "background": "#1e1e2e",
    "black": "#6f707e",
    "blue": "#89b4fa",
    "brightBlack": "#717486",
    "brightBlue": "#89b4fa",
    "brightCyan": "#94e2d5",
    "brightGreen": "#a6e3a1",
    "brightMagenta": "#f5c2e7",
    "brightRed": "#f38ba8",
    "brightWhite": "#a6adc8",
    "brightYellow": "#f9e2af",
    "cursor": "#f5e0dc",
    "cyan": "#94e2d5",
    "foreground": "#cdd6f4",
    "green": "#a6e3a1",
    "magenta": "#f5c2e7",
    "red": "#f38ba8",
    "selectionBackground": "#f5e0dc55",
    "white": "#bac2de",
    "yellow": "#f9e2af",
  },
  "cinder": {
    "background": "#383c44",
    "black": "#88898d",
    "blue": "#4aa5f0",
    "brightBlack": "#9f9c98",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#f3eadc",
    "brightYellow": "#f0c366",
    "cursor": "#ec9448",
    "cyan": "#42b3c2",
    "foreground": "#f3eadc",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e2636e",
    "selectionBackground": "#ec944855",
    "white": "#d1cbc1",
    "yellow": "#d1a54b",
  },
  "cobalt": {
    "background": "#193549",
    "black": "#7b7b7b",
    "blue": "#2783de",
    "brightBlack": "#6f8fa6",
    "brightBlue": "#5fa8ff",
    "brightCyan": "#9effff",
    "brightGreen": "#3ad900",
    "brightMagenta": "#fb94ff",
    "brightRed": "#ff628c",
    "brightWhite": "#ffffff",
    "brightYellow": "#ffe57f",
    "cursor": "#ffc600",
    "cyan": "#80fcff",
    "foreground": "#ffffff",
    "green": "#3ad900",
    "magenta": "#ff9d00",
    "red": "#ff628c",
    "selectionBackground": "#ffc60055",
    "white": "#bbbbbb",
    "yellow": "#ffc600",
  },
  "dracula": {
    "background": "#1e1f29",
    "black": "#707070",
    "blue": "#bd93f9",
    "brightBlack": "#6f6f6f",
    "brightBlue": "#bd93f9",
    "brightCyan": "#8be9fd",
    "brightGreen": "#50fa7b",
    "brightMagenta": "#ff79c6",
    "brightRed": "#ff5555",
    "brightWhite": "#ffffff",
    "brightYellow": "#f1fa8c",
    "cursor": "#bbbbbb",
    "cyan": "#8be9fd",
    "foreground": "#f8f8f2",
    "green": "#50fa7b",
    "magenta": "#ff79c6",
    "red": "#ff5555",
    "selectionBackground": "#bbbbbb55",
    "white": "#bbbbbb",
    "yellow": "#f1fa8c",
  },
  "fawn": {
    "background": "#e6d8c0",
    "black": "#7b7164",
    "blue": "#3577ac",
    "brightBlack": "#897867",
    "brightBlue": "#3382a8",
    "brightCyan": "#2e7f88",
    "brightGreen": "#5c7d41",
    "brightMagenta": "#9f53b7",
    "brightRed": "#c74b56",
    "brightWhite": "#3d2a1f",
    "brightYellow": "#91773e",
    "cursor": "#7a4e35",
    "cyan": "#30818b",
    "foreground": "#3d2a1f",
    "green": "#5c8043",
    "magenta": "#a453bc",
    "red": "#ce4e59",
    "selectionBackground": "#7a4e3555",
    "white": "#5b493c",
    "yellow": "#8a6d31",
  },
  "garnet": {
    "background": "#1f0d10",
    "black": "#6f5f62",
    "blue": "#4aa5f0",
    "brightBlack": "#947e81",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#f3dadd",
    "brightYellow": "#f0c366",
    "cursor": "#ff6b7d",
    "cyan": "#42b3c2",
    "foreground": "#f3dadd",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#ff6b7d55",
    "white": "#cdb5b8",
    "yellow": "#d1a54b",
  },
  "graphite": {
    "background": "#1f1f1f",
    "black": "#6a6a6a",
    "blue": "#4aa5f0",
    "brightBlack": "#848484",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#d6d6d6",
    "brightYellow": "#f0c366",
    "cursor": "#d6d6d6",
    "cyan": "#42b3c2",
    "foreground": "#d6d6d6",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#d6d6d655",
    "white": "#b5b5b5",
    "yellow": "#d1a54b",
  },
  "gruvbox-dark": {
    "background": "#282828",
    "black": "#717171",
    "blue": "#458588",
    "brightBlack": "#928374",
    "brightBlue": "#83a598",
    "brightCyan": "#8ec07c",
    "brightGreen": "#b8bb26",
    "brightMagenta": "#d3869b",
    "brightRed": "#fb4934",
    "brightWhite": "#ebdbb2",
    "brightYellow": "#fabd2f",
    "cursor": "#ebdbb2",
    "cyan": "#689d6a",
    "foreground": "#ebdbb2",
    "green": "#98971a",
    "magenta": "#b16286",
    "red": "#d44640",
    "selectionBackground": "#ebdbb255",
    "white": "#a89984",
    "yellow": "#d79921",
  },
  "high-contrast": {
    "background": "#000000",
    "black": "#646464",
    "blue": "#7aa8ff",
    "brightBlack": "#a0a0a0",
    "brightBlue": "#a6c4ff",
    "brightCyan": "#99ffff",
    "brightGreen": "#8cff8c",
    "brightMagenta": "#ffa6ff",
    "brightRed": "#ff9494",
    "brightWhite": "#ffffff",
    "brightYellow": "#ffff99",
    "cursor": "#ffff00",
    "cyan": "#5cffff",
    "foreground": "#ffffff",
    "green": "#5cff5c",
    "magenta": "#ff7aff",
    "red": "#ff6b6b",
    "selectionBackground": "#ffff0055",
    "white": "#ffffff",
    "yellow": "#ffff5c",
  },
  "horizon": {
    "background": "#1c1e26",
    "black": "#717175",
    "blue": "#26bbd9",
    "brightBlack": "#6f6f70",
    "brightBlue": "#3fc4de",
    "brightCyan": "#6be4e6",
    "brightGreen": "#3fdaa4",
    "brightMagenta": "#f075b5",
    "brightRed": "#ec6a88",
    "brightWhite": "#d5d8da",
    "brightYellow": "#fbc3a7",
    "cursor": "#e95678",
    "cyan": "#59e1e3",
    "foreground": "#d5d8da",
    "green": "#29d398",
    "magenta": "#ee64ac",
    "red": "#e95678",
    "selectionBackground": "#e9567855",
    "white": "#d5d8da",
    "yellow": "#fab795",
  },
  "kanagawa": {
    "background": "#1f1f28",
    "black": "#717176",
    "blue": "#7e9cd8",
    "brightBlack": "#727169",
    "brightBlue": "#7fb4ca",
    "brightCyan": "#7aa89f",
    "brightGreen": "#98bb6c",
    "brightMagenta": "#938aa9",
    "brightRed": "#e82424",
    "brightWhite": "#dcd7ba",
    "brightYellow": "#e6c384",
    "cursor": "#c8c093",
    "cyan": "#6a9589",
    "foreground": "#dcd7ba",
    "green": "#76946a",
    "magenta": "#957fb8",
    "red": "#c34043",
    "selectionBackground": "#c8c09355",
    "white": "#c8c093",
    "yellow": "#c0a36e",
  },
  "lavender": {
    "background": "#f1edfa",
    "black": "#8a8592",
    "blue": "#3f8ccb",
    "brightBlack": "#867f94",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#d8525d",
    "brightWhite": "#2e2540",
    "brightYellow": "#9e8143",
    "cursor": "#7c5cc4",
    "cyan": "#348c97",
    "foreground": "#2e2540",
    "green": "#648b49",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#7c5cc455",
    "white": "#514961",
    "yellow": "#a3813a",
  },
  "marine": {
    "background": "#012456",
    "black": "#5b7091",
    "blue": "#4aa5f0",
    "brightBlack": "#8393ab",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#eeedf0",
    "brightYellow": "#f0c366",
    "cursor": "#ffd866",
    "cyan": "#42b3c2",
    "foreground": "#eeedf0",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#ffd86655",
    "white": "#c3c9d4",
    "yellow": "#d1a54b",
  },
  "mint": {
    "background": "#e5f6ef",
    "black": "#818e88",
    "blue": "#3f8ccb",
    "brightBlack": "#778a82",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#1d3129",
    "brightYellow": "#9e8143",
    "cursor": "#1a8a64",
    "cyan": "#3898a4",
    "foreground": "#1d3129",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#1a8a6455",
    "white": "#41544d",
    "yellow": "#a3813a",
  },
  "mist": {
    "background": "#e4e4e2",
    "black": "#797978",
    "blue": "#3a81bb",
    "brightBlack": "#7b7b7d",
    "brightBlue": "#3382a8",
    "brightCyan": "#328a94",
    "brightGreen": "#648847",
    "brightMagenta": "#ad5ac7",
    "brightRed": "#d8525d",
    "brightWhite": "#26262a",
    "brightYellow": "#91773e",
    "cursor": "#4a4a52",
    "cyan": "#348c97",
    "foreground": "#26262a",
    "green": "#648b49",
    "magenta": "#b25acc",
    "red": "#ce4e59",
    "selectionBackground": "#4a4a5255",
    "white": "#48484b",
    "yellow": "#967735",
  },
  "monokai": {
    "background": "#272822",
    "black": "#70716e",
    "blue": "#66d9ef",
    "brightBlack": "#75715e",
    "brightBlue": "#66d9ef",
    "brightCyan": "#a1efe4",
    "brightGreen": "#a6e22e",
    "brightMagenta": "#ae81ff",
    "brightRed": "#f92672",
    "brightWhite": "#f9f8f5",
    "brightYellow": "#f4bf75",
    "cursor": "#f8f8f0",
    "cyan": "#a1efe4",
    "foreground": "#f8f8f2",
    "green": "#a6e22e",
    "magenta": "#ae81ff",
    "red": "#f92672",
    "selectionBackground": "#f8f8f055",
    "white": "#f8f8f2",
    "yellow": "#f4bf75",
  },
  "moss": {
    "background": "#141c16",
    "black": "#646a64",
    "blue": "#4aa5f0",
    "brightBlack": "#808a7d",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#d8e4d2",
    "brightYellow": "#f0c366",
    "cursor": "#8cc07a",
    "cyan": "#42b3c2",
    "foreground": "#d8e4d2",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#8cc07a55",
    "white": "#b5c0b0",
    "yellow": "#d1a54b",
  },
  "nord": {
    "background": "#2e3440",
    "black": "#7d838e",
    "blue": "#81a1c1",
    "brightBlack": "#7b7f89",
    "brightBlue": "#68809a",
    "brightCyan": "#6d96a5",
    "brightGreen": "#809575",
    "brightMagenta": "#957e95",
    "brightRed": "#a56f76",
    "brightWhite": "#aeb3bb",
    "brightYellow": "#b29e75",
    "cursor": "#d8dee9",
    "cyan": "#88c0d0",
    "foreground": "#d8dee9",
    "green": "#a3be8c",
    "magenta": "#b48ead",
    "red": "#bf616a",
    "selectionBackground": "#d8dee955",
    "white": "#e5e9f0",
    "yellow": "#ebcb8b",
  },
  "ocean": {
    "background": "#0a2630",
    "black": "#5c717a",
    "blue": "#4aa5f0",
    "brightBlack": "#79949b",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#d3eef2",
    "brightYellow": "#f0c366",
    "cursor": "#5fd4e0",
    "cyan": "#42b3c2",
    "foreground": "#d3eef2",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#5fd4e055",
    "white": "#afcacf",
    "yellow": "#d1a54b",
  },
  "paper": {
    "background": "#f6f4ee",
    "black": "#8c8b85",
    "blue": "#3f8ccb",
    "brightBlack": "#86837d",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#2a2620",
    "brightYellow": "#9e8143",
    "cursor": "#3a63c2",
    "cyan": "#3898a4",
    "foreground": "#2a2620",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#3a63c255",
    "white": "#4f4b45",
    "yellow": "#a3813a",
  },
  "peach": {
    "background": "#fdeee3",
    "black": "#938780",
    "blue": "#3f8ccb",
    "brightBlack": "#948278",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#3e2a20",
    "brightYellow": "#9e8143",
    "cursor": "#c9632f",
    "cyan": "#348c97",
    "foreground": "#3e2a20",
    "green": "#648b49",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#c9632f55",
    "white": "#604d43",
    "yellow": "#a3813a",
  },
  "phosphor": {
    "background": "#050d06",
    "black": "#4d6350",
    "blue": "#4aa5f0",
    "brightBlack": "#488a4f",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#7ef08a",
    "brightYellow": "#f0c366",
    "cursor": "#7ef08a",
    "cyan": "#42b3c2",
    "foreground": "#7ef08a",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#7ef08a55",
    "white": "#68c772",
    "yellow": "#d1a54b",
  },
  "pitch": {
    "background": "#000000",
    "black": "#5a5957",
    "blue": "#4aa5f0",
    "brightBlack": "#837f78",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#efe7da",
    "brightYellow": "#f0c366",
    "cursor": "#ec9448",
    "cyan": "#42b3c2",
    "foreground": "#efe7da",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#ec944855",
    "white": "#c4bdb3",
    "yellow": "#d1a54b",
  },
  "plum": {
    "background": "#1c1226",
    "black": "#6b6472",
    "blue": "#4aa5f0",
    "brightBlack": "#8d8298",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#e9ddf5",
    "brightYellow": "#f0c366",
    "cursor": "#c792ea",
    "cyan": "#42b3c2",
    "foreground": "#e9ddf5",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#c792ea55",
    "white": "#c4b8d0",
    "yellow": "#d1a54b",
  },
  "prism": {
    "background": "#0b0b0f",
    "black": "#606064",
    "blue": "#4aa5f0",
    "brightBlack": "#84848a",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#e7e7ee",
    "brightYellow": "#f0c366",
    "cursor": "#7c7cf0",
    "cyan": "#42b3c2",
    "foreground": "#e7e7ee",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#7c7cf055",
    "white": "#bfbfc6",
    "yellow": "#d1a54b",
  },
  "pt-default": {
    "background": "#121212",
    "black": "#646464",
    "blue": "#5da9f6",
    "brightBlack": "#6b6b6b",
    "brightBlue": "#a5c7ff",
    "brightCyan": "#b7fff9",
    "brightGreen": "#ddf88f",
    "brightMagenta": "#ddaaff",
    "brightRed": "#f58c80",
    "brightWhite": "#ffffff",
    "brightYellow": "#eee5b2",
    "cursor": "#bbbbbb",
    "cyan": "#82fff7",
    "foreground": "#dedacf",
    "green": "#b1e969",
    "magenta": "#e86aff",
    "red": "#ff615a",
    "selectionBackground": "#bbbbbb55",
    "white": "#dedacf",
    "yellow": "#ebd99c",
  },
  "retro": {
    "background": "#352879",
    "black": "#8881b4",
    "blue": "#4aa5f0",
    "brightBlack": "#857cc0",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#b3adf0",
    "brightYellow": "#f0c366",
    "cursor": "#b3adf0",
    "cyan": "#42b3c2",
    "foreground": "#b3adf0",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#b3adf055",
    "white": "#9c95db",
    "yellow": "#d1a54b",
  },
  "rosewood": {
    "background": "#24161d",
    "black": "#71656b",
    "blue": "#4aa5f0",
    "brightBlack": "#95838b",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#f2dce5",
    "brightYellow": "#f0c366",
    "cursor": "#ee85aa",
    "cyan": "#42b3c2",
    "foreground": "#f2dce5",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#ee85aa55",
    "white": "#cdb8c1",
    "yellow": "#d1a54b",
  },
  "sage": {
    "background": "#e9efe5",
    "black": "#848983",
    "blue": "#3f8ccb",
    "brightBlack": "#7c867b",
    "brightBlue": "#378db7",
    "brightCyan": "#328a94",
    "brightGreen": "#648847",
    "brightMagenta": "#bc62d8",
    "brightRed": "#d8525d",
    "brightWhite": "#223024",
    "brightYellow": "#9e8143",
    "cursor": "#4c7d47",
    "cyan": "#348c97",
    "foreground": "#223024",
    "green": "#648b49",
    "magenta": "#b25acc",
    "red": "#e05561",
    "selectionBackground": "#4c7d4755",
    "white": "#465247",
    "yellow": "#a3813a",
  },
  "sky": {
    "background": "#eaf4fd",
    "black": "#848b92",
    "blue": "#3f8ccb",
    "brightBlack": "#798592",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#1c2b3a",
    "brightYellow": "#9e8143",
    "cursor": "#2f7bd6",
    "cyan": "#3898a4",
    "foreground": "#1c2b3a",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#2f7bd655",
    "white": "#414f5d",
    "yellow": "#a3813a",
  },
  "solarized-dark": {
    "background": "#002b36",
    "black": "#5b7b83",
    "blue": "#268bd2",
    "brightBlack": "#657a80",
    "brightBlue": "#6c9fd8",
    "brightCyan": "#93a1a1",
    "brightGreen": "#93a1a1",
    "brightMagenta": "#6c71c4",
    "brightRed": "#cb4b16",
    "brightWhite": "#fdf6e3",
    "brightYellow": "#839496",
    "cursor": "#93a1a1",
    "cyan": "#2aa198",
    "foreground": "#93a1a1",
    "green": "#859900",
    "magenta": "#d33682",
    "red": "#dc322f",
    "selectionBackground": "#93a1a155",
    "white": "#eee8d5",
    "yellow": "#b58900",
  },
  "synthwave": {
    "background": "#262335",
    "black": "#706f7b",
    "blue": "#03edf9",
    "brightBlack": "#8a7ab5",
    "brightBlue": "#03edf9",
    "brightCyan": "#03edf9",
    "brightGreen": "#72f1b8",
    "brightMagenta": "#ff7edb",
    "brightRed": "#fe4450",
    "brightWhite": "#ffffff",
    "brightYellow": "#fede5d",
    "cursor": "#ff7edb",
    "cyan": "#03edf9",
    "foreground": "#f0eff1",
    "green": "#72f1b8",
    "magenta": "#ff7edb",
    "red": "#fe4450",
    "selectionBackground": "#ff7edb55",
    "white": "#ffffff",
    "yellow": "#fede5d",
  },
  "tokyonight": {
    "background": "#1a1b26",
    "black": "#717177",
    "blue": "#7aa2f7",
    "brightBlack": "#6b7089",
    "brightBlue": "#7aa2f7",
    "brightCyan": "#7dcfff",
    "brightGreen": "#9ece6a",
    "brightMagenta": "#bb9af7",
    "brightRed": "#f7768e",
    "brightWhite": "#c0caf5",
    "brightYellow": "#e0af68",
    "cursor": "#c0caf5",
    "cyan": "#7dcfff",
    "foreground": "#c0caf5",
    "green": "#9ece6a",
    "magenta": "#bb9af7",
    "red": "#f7768e",
    "selectionBackground": "#c0caf555",
    "white": "#a9b1d6",
    "yellow": "#e0af68",
  },
  "umber": {
    "background": "#2b211b",
    "black": "#746c65",
    "blue": "#4aa5f0",
    "brightBlack": "#938676",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#e8d8c0",
    "brightYellow": "#f0c366",
    "cursor": "#d9b38c",
    "cyan": "#42b3c2",
    "foreground": "#e8d8c0",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#d9b38c55",
    "white": "#c6b7a2",
    "yellow": "#d1a54b",
  },
  "volt": {
    "background": "#050706",
    "black": "#585f53",
    "blue": "#38b6ff",
    "brightBlack": "#6b7562",
    "brightBlue": "#7cd0ff",
    "brightCyan": "#78ffe8",
    "brightGreen": "#e2ff5c",
    "brightMagenta": "#ff8ae5",
    "brightRed": "#ff7088",
    "brightWhite": "#ffffff",
    "brightYellow": "#fbff9a",
    "cursor": "#d8ff26",
    "cyan": "#22f0d0",
    "foreground": "#eef2e6",
    "green": "#c6f41f",
    "magenta": "#ff4fd8",
    "red": "#ff3b5c",
    "selectionBackground": "#d8ff2655",
    "white": "#d9dfd0",
    "yellow": "#f4ff52",
  },
}
`;

exports[`resolveTermTheme, opaque, as it was > every preset and the Custom on a picked ground 1`] = `
{
  "amber@#203040": {
    "background": "#203040",
    "black": "#887e6f",
    "blue": "#4aa5f0",
    "brightBlack": "#9d7a42",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#ffbf5a",
    "brightYellow": "#f0c366",
    "cursor": "#ffbf5a",
    "cyan": "#42b3c2",
    "foreground": "#ffbf5a",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#ffbf5a55",
    "white": "#d49f4a",
    "yellow": "#d1a54b",
  },
  "amber@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#736755",
    "blue": "#3f8ccb",
    "brightBlack": "#946e32",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#a87e3b",
    "brightYellow": "#9e8143",
    "cursor": "#a87e3b",
    "cyan": "#3898a4",
    "foreground": "#84622e",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#a87e3b55",
    "white": "#a57b3a",
    "yellow": "#a3813a",
  },
  "blossom@#203040": {
    "background": "#203040",
    "black": "#91858b",
    "blue": "#3f8ccb",
    "brightBlack": "#917e87",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#877a82",
    "brightYellow": "#9e8143",
    "cursor": "#cb5883",
    "cyan": "#3898a4",
    "foreground": "#a2989d",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#cb588355",
    "white": "#8c7b85",
    "yellow": "#a3813a",
  },
  "blossom@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#91858b",
    "blue": "#3f8ccb",
    "brightBlack": "#917e87",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#3b2230",
    "brightYellow": "#9e8143",
    "cursor": "#c64a78",
    "cyan": "#3898a4",
    "foreground": "#3b2230",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#c64a7855",
    "white": "#5e4753",
    "yellow": "#a3813a",
  },
  "butter@#203040": {
    "background": "#203040",
    "black": "#918e79",
    "blue": "#3f8ccb",
    "brightBlack": "#918a73",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#7c796c",
    "brightYellow": "#9e8143",
    "cursor": "#9a7300",
    "cyan": "#3898a4",
    "foreground": "#99978d",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#9a730055",
    "white": "#817b6b",
    "yellow": "#a3813a",
  },
  "butter@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#85836f",
    "blue": "#3f8ccb",
    "brightBlack": "#918a73",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#3a3320",
    "brightYellow": "#9e8143",
    "cursor": "#9a7300",
    "cyan": "#3898a4",
    "foreground": "#3a3320",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#9a730055",
    "white": "#5d5641",
    "yellow": "#a3813a",
  },
  "campbell@#203040": {
    "background": "#203040",
    "black": "#777777",
    "blue": "#4870e4",
    "brightBlack": "#818181",
    "brightBlue": "#3b78ff",
    "brightCyan": "#61d6d6",
    "brightGreen": "#16c60c",
    "brightMagenta": "#ca48ba",
    "brightRed": "#e74856",
    "brightWhite": "#f2f2f2",
    "brightYellow": "#f9f1a5",
    "cursor": "#ffffff",
    "cyan": "#3a96dd",
    "foreground": "#cccccc",
    "green": "#13a10e",
    "magenta": "#aa59b5",
    "red": "#d24450",
    "selectionBackground": "#ffffff55",
    "white": "#cccccc",
    "yellow": "#c19c00",
  },
  "campbell@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#5e5e5e",
    "blue": "#2756e0",
    "brightBlack": "#767676",
    "brightBlue": "#3b78ff",
    "brightCyan": "#3f8e8e",
    "brightGreen": "#119a09",
    "brightMagenta": "#b4009e",
    "brightRed": "#e74856",
    "brightWhite": "#878787",
    "brightYellow": "#8b865c",
    "cursor": "#848484",
    "cyan": "#358acb",
    "foreground": "#686868",
    "green": "#13a10e",
    "magenta": "#9b3ba8",
    "red": "#c50f1f",
    "selectionBackground": "#84848455",
    "white": "#868686",
    "yellow": "#a48400",
  },
  "catppuccin-latte@#203040": {
    "background": "#203040",
    "black": "#75788c",
    "blue": "#3072f6",
    "brightBlack": "#787b8f",
    "brightBlue": "#3072f6",
    "brightCyan": "#179299",
    "brightGreen": "#3b9328",
    "brightMagenta": "#c664ac",
    "brightRed": "#dc4465",
    "brightWhite": "#868a92",
    "brightYellow": "#bd7919",
    "cursor": "#9b58f1",
    "cyan": "#179299",
    "foreground": "#9b9dab",
    "green": "#3b9328",
    "magenta": "#c664ac",
    "red": "#dc4465",
    "selectionBackground": "#9b58f155",
    "white": "#858994",
    "yellow": "#bd7919",
  },
  "catppuccin-latte@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#5c5f77",
    "blue": "#1e66f5",
    "brightBlack": "#6c6f85",
    "brightBlue": "#1e66f5",
    "brightCyan": "#179299",
    "brightGreen": "#3b9328",
    "brightMagenta": "#c664ac",
    "brightRed": "#d20f39",
    "brightWhite": "#868a92",
    "brightYellow": "#bd7919",
    "cursor": "#8839ef",
    "cyan": "#179299",
    "foreground": "#4c4f69",
    "green": "#3b9328",
    "magenta": "#c664ac",
    "red": "#d20f39",
    "selectionBackground": "#8839ef55",
    "white": "#858994",
    "yellow": "#bd7919",
  },
  "catppuccin-mocha@#203040": {
    "background": "#203040",
    "black": "#7b7b88",
    "blue": "#89b4fa",
    "brightBlack": "#7c7f90",
    "brightBlue": "#89b4fa",
    "brightCyan": "#94e2d5",
    "brightGreen": "#a6e3a1",
    "brightMagenta": "#f5c2e7",
    "brightRed": "#f38ba8",
    "brightWhite": "#a6adc8",
    "brightYellow": "#f9e2af",
    "cursor": "#f5e0dc",
    "cyan": "#94e2d5",
    "foreground": "#cdd6f4",
    "green": "#a6e3a1",
    "magenta": "#f5c2e7",
    "red": "#f38ba8",
    "selectionBackground": "#f5e0dc55",
    "white": "#bac2de",
    "yellow": "#f9e2af",
  },
  "catppuccin-mocha@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#6f707e",
    "blue": "#6282b3",
    "brightBlack": "#717486",
    "brightBlue": "#6282b3",
    "brightCyan": "#62958d",
    "brightGreen": "#658a62",
    "brightMagenta": "#a18099",
    "brightRed": "#be6d84",
    "brightWhite": "#82869b",
    "brightYellow": "#97896a",
    "cursor": "#948884",
    "cyan": "#62958d",
    "foreground": "#616673",
    "green": "#658a62",
    "magenta": "#a18099",
    "red": "#be6d84",
    "selectionBackground": "#94888455",
    "white": "#848b9f",
    "yellow": "#97896a",
  },
  "cinder@#203040": {
    "background": "#203040",
    "black": "#88898d",
    "blue": "#4aa5f0",
    "brightBlack": "#9f9c98",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#f3eadc",
    "brightYellow": "#f0c366",
    "cursor": "#ec9448",
    "cyan": "#42b3c2",
    "foreground": "#f3eadc",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e2636e",
    "selectionBackground": "#ec944855",
    "white": "#d1cbc1",
    "yellow": "#d1a54b",
  },
  "cinder@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#88898d",
    "blue": "#3f8ccb",
    "brightBlack": "#868481",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#888379",
    "brightYellow": "#9e8143",
    "cursor": "#b87338",
    "cyan": "#3898a4",
    "foreground": "#6a665e",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#d05b65",
    "selectionBackground": "#b8733855",
    "white": "#8a8580",
    "yellow": "#a3813a",
  },
  "cobalt@#203040": {
    "background": "#203040",
    "black": "#7b7b7b",
    "blue": "#2783de",
    "brightBlack": "#6f8fa6",
    "brightBlue": "#5fa8ff",
    "brightCyan": "#9effff",
    "brightGreen": "#3ad900",
    "brightMagenta": "#fb94ff",
    "brightRed": "#ff628c",
    "brightWhite": "#ffffff",
    "brightYellow": "#ffe57f",
    "cursor": "#ffc600",
    "cyan": "#80fcff",
    "foreground": "#ffffff",
    "green": "#3ad900",
    "magenta": "#ff9d00",
    "red": "#ff628c",
    "selectionBackground": "#ffc60055",
    "white": "#bbbbbb",
    "yellow": "#ffc600",
  },
  "cobalt@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#7b7b7b",
    "blue": "#2783de",
    "brightBlack": "#6f8fa6",
    "brightBlue": "#4a84c7",
    "brightCyan": "#578f8f",
    "brightGreen": "#299b00",
    "brightMagenta": "#b46ab7",
    "brightRed": "#d85377",
    "brightWhite": "#848484",
    "brightYellow": "#9b8b4d",
    "cursor": "#a88300",
    "cyan": "#488d8f",
    "foreground": "#666666",
    "green": "#299b00",
    "magenta": "#c77900",
    "red": "#d85377",
    "selectionBackground": "#a8830055",
    "white": "#858585",
    "yellow": "#a88300",
  },
  "custom@#203040": {
    "background": "#203040",
    "black": "#7c7c82",
    "blue": "#7aa2f7",
    "cursor": "#78797f",
    "cyan": "#7dcfff",
    "foreground": "#c0caf5",
    "green": "#7d7e86",
    "magenta": "#bb9af7",
    "red": "#f7768e",
    "selectionBackground": "#78797f55",
    "white": "#a9b1d6",
    "yellow": "#e0af68",
  },
  "custom@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#717177",
    "blue": "#6789d1",
    "cursor": "#20212c",
    "cyan": "#5388a8",
    "foreground": "#63667d",
    "green": "#66676f",
    "magenta": "#9179c0",
    "red": "#d16479",
    "selectionBackground": "#20212c55",
    "white": "#848aa7",
    "yellow": "#a17d4b",
  },
  "dracula@#203040": {
    "background": "#203040",
    "black": "#7b7b7b",
    "blue": "#bd93f9",
    "brightBlack": "#7b7b7b",
    "brightBlue": "#bd93f9",
    "brightCyan": "#8be9fd",
    "brightGreen": "#50fa7b",
    "brightMagenta": "#ff79c6",
    "brightRed": "#ff5555",
    "brightWhite": "#ffffff",
    "brightYellow": "#f1fa8c",
    "cursor": "#bbbbbb",
    "cyan": "#8be9fd",
    "foreground": "#f8f8f2",
    "green": "#50fa7b",
    "magenta": "#ff79c6",
    "red": "#ff5555",
    "selectionBackground": "#bbbbbb55",
    "white": "#bbbbbb",
    "yellow": "#f1fa8c",
  },
  "dracula@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#707070",
    "blue": "#9372c2",
    "brightBlack": "#6f6f6f",
    "brightBlue": "#9372c2",
    "brightCyan": "#558e9a",
    "brightGreen": "#31984b",
    "brightMagenta": "#c75e9a",
    "brightRed": "#eb4e4e",
    "brightWhite": "#848484",
    "brightYellow": "#868c4e",
    "cursor": "#858585",
    "cyan": "#558e9a",
    "foreground": "#6d6d69",
    "green": "#31984b",
    "magenta": "#c75e9a",
    "red": "#eb4e4e",
    "selectionBackground": "#85858555",
    "white": "#858585",
    "yellow": "#868c4e",
  },
  "fawn@#203040": {
    "background": "#203040",
    "black": "#867c70",
    "blue": "#4582b3",
    "brightBlack": "#897867",
    "brightBlue": "#3382a8",
    "brightCyan": "#3f8992",
    "brightGreen": "#698750",
    "brightMagenta": "#a761bd",
    "brightRed": "#cb5964",
    "brightWhite": "#897d77",
    "brightYellow": "#91773e",
    "cursor": "#987562",
    "cyan": "#418b94",
    "foreground": "#a39a95",
    "green": "#698a52",
    "magenta": "#ab61c1",
    "red": "#ce4e59",
    "selectionBackground": "#98756255",
    "white": "#897c73",
    "yellow": "#937941",
  },
  "fawn@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#7b7164",
    "blue": "#3577ac",
    "brightBlack": "#897867",
    "brightBlue": "#3382a8",
    "brightCyan": "#2e7f88",
    "brightGreen": "#5c7d41",
    "brightMagenta": "#9f53b7",
    "brightRed": "#c74b56",
    "brightWhite": "#3d2a1f",
    "brightYellow": "#91773e",
    "cursor": "#7a4e35",
    "cyan": "#30818b",
    "foreground": "#3d2a1f",
    "green": "#5c8043",
    "magenta": "#a453bc",
    "red": "#ce4e59",
    "selectionBackground": "#7a4e3555",
    "white": "#5b493c",
    "yellow": "#8a6d31",
  },
  "garnet@#203040": {
    "background": "#203040",
    "black": "#86787b",
    "blue": "#4aa5f0",
    "brightBlack": "#947e81",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#f3dadd",
    "brightYellow": "#f0c366",
    "cursor": "#ff6b7d",
    "cyan": "#42b3c2",
    "foreground": "#f3dadd",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#ff6b7d55",
    "white": "#cdb5b8",
    "yellow": "#d1a54b",
  },
  "garnet@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#6f5f62",
    "blue": "#3f8ccb",
    "brightBlack": "#947e81",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#948485",
    "brightYellow": "#9e8143",
    "cursor": "#d85a6a",
    "cyan": "#3898a4",
    "foreground": "#736667",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#d85a6a55",
    "white": "#938384",
    "yellow": "#a3813a",
  },
  "graphite@#203040": {
    "background": "#203040",
    "black": "#818181",
    "blue": "#4aa5f0",
    "brightBlack": "#848484",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#d6d6d6",
    "brightYellow": "#f0c366",
    "cursor": "#d6d6d6",
    "cyan": "#42b3c2",
    "foreground": "#d6d6d6",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#d6d6d655",
    "white": "#b5b5b5",
    "yellow": "#d1a54b",
  },
  "graphite@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#6a6a6a",
    "blue": "#3f8ccb",
    "brightBlack": "#848484",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#838383",
    "brightYellow": "#9e8143",
    "cursor": "#838383",
    "cyan": "#3898a4",
    "foreground": "#666666",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#83838355",
    "white": "#838383",
    "yellow": "#a3813a",
  },
  "gruvbox-dark@#203040": {
    "background": "#203040",
    "black": "#7c7c7c",
    "blue": "#458588",
    "brightBlack": "#928374",
    "brightBlue": "#83a598",
    "brightCyan": "#8ec07c",
    "brightGreen": "#b8bb26",
    "brightMagenta": "#d3869b",
    "brightRed": "#fb4934",
    "brightWhite": "#ebdbb2",
    "brightYellow": "#fabd2f",
    "cursor": "#ebdbb2",
    "cyan": "#689d6a",
    "foreground": "#ebdbb2",
    "green": "#98971a",
    "magenta": "#b16286",
    "red": "#d44640",
    "selectionBackground": "#ebdbb255",
    "white": "#a89984",
    "yellow": "#d79921",
  },
  "gruvbox-dark@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#717171",
    "blue": "#458588",
    "brightBlack": "#928374",
    "brightBlue": "#6f8c81",
    "brightCyan": "#668a59",
    "brightGreen": "#84851b",
    "brightMagenta": "#b27184",
    "brightRed": "#fb4934",
    "brightWhite": "#8f846d",
    "brightYellow": "#a57c1f",
    "cursor": "#8f846d",
    "cyan": "#609062",
    "foreground": "#6f6655",
    "green": "#8c8b18",
    "magenta": "#b16286",
    "red": "#d44640",
    "selectionBackground": "#8f846d55",
    "white": "#8f826f",
    "yellow": "#b6821c",
  },
  "high-contrast@#203040": {
    "background": "#203040",
    "black": "#7b7b7b",
    "blue": "#7aa8ff",
    "brightBlack": "#a0a0a0",
    "brightBlue": "#a6c4ff",
    "brightCyan": "#99ffff",
    "brightGreen": "#8cff8c",
    "brightMagenta": "#ffa6ff",
    "brightRed": "#ff9494",
    "brightWhite": "#ffffff",
    "brightYellow": "#ffff99",
    "cursor": "#ffff00",
    "cyan": "#5cffff",
    "foreground": "#ffffff",
    "green": "#5cff5c",
    "magenta": "#ff7aff",
    "red": "#ff6b6b",
    "selectionBackground": "#ffff0055",
    "white": "#ffffff",
    "yellow": "#ffff5c",
  },
  "high-contrast@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#646464",
    "blue": "#5f84c7",
    "brightBlack": "#878787",
    "brightBlue": "#6e82a8",
    "brightCyan": "#568f8f",
    "brightGreen": "#4e8f4e",
    "brightMagenta": "#a86ea8",
    "brightRed": "#c77373",
    "brightWhite": "#848484",
    "brightYellow": "#84844f",
    "cursor": "#8f8f00",
    "cyan": "#348f8f",
    "foreground": "#666666",
    "green": "#389b38",
    "magenta": "#c75fc7",
    "red": "#d85a5a",
    "selectionBackground": "#8f8f0055",
    "white": "#848484",
    "yellow": "#8f8f34",
  },
  "horizon@#203040": {
    "background": "#203040",
    "black": "#7c7c80",
    "blue": "#26bbd9",
    "brightBlack": "#7b7b7b",
    "brightBlue": "#3fc4de",
    "brightCyan": "#6be4e6",
    "brightGreen": "#3fdaa4",
    "brightMagenta": "#f075b5",
    "brightRed": "#ec6a88",
    "brightWhite": "#d5d8da",
    "brightYellow": "#fbc3a7",
    "cursor": "#e95678",
    "cyan": "#59e1e3",
    "foreground": "#d5d8da",
    "green": "#29d398",
    "magenta": "#ee64ac",
    "red": "#e95678",
    "selectionBackground": "#e9567855",
    "white": "#d5d8da",
    "yellow": "#fab795",
  },
  "horizon@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#717175",
    "blue": "#1d91a9",
    "brightBlack": "#6f6f70",
    "brightBlue": "#2d8d9f",
    "brightCyan": "#469798",
    "brightGreen": "#2d9c76",
    "brightMagenta": "#cb639a",
    "brightRed": "#d9627d",
    "brightWhite": "#828484",
    "brightYellow": "#a6816f",
    "cursor": "#e95678",
    "cyan": "#3a9496",
    "foreground": "#656666",
    "green": "#1d976d",
    "magenta": "#db5c9e",
    "red": "#e95678",
    "selectionBackground": "#e9567855",
    "white": "#828484",
    "yellow": "#a57962",
  },
  "kanagawa@#203040": {
    "background": "#203040",
    "black": "#7c7c81",
    "blue": "#7e9cd8",
    "brightBlack": "#7d7c75",
    "brightBlue": "#7fb4ca",
    "brightCyan": "#7aa89f",
    "brightGreen": "#98bb6c",
    "brightMagenta": "#938aa9",
    "brightRed": "#e82424",
    "brightWhite": "#dcd7ba",
    "brightYellow": "#e6c384",
    "cursor": "#c8c093",
    "cyan": "#6a9589",
    "foreground": "#dcd7ba",
    "green": "#76946a",
    "magenta": "#957fb8",
    "red": "#c84f52",
    "selectionBackground": "#c8c09355",
    "white": "#c8c093",
    "yellow": "#c0a36e",
  },
  "kanagawa@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#717176",
    "blue": "#6b84b7",
    "brightBlack": "#727169",
    "brightBlue": "#638d9d",
    "brightCyan": "#678f86",
    "brightGreen": "#779154",
    "brightMagenta": "#877f9b",
    "brightRed": "#e82424",
    "brightWhite": "#84836f",
    "brightYellow": "#988156",
    "cursor": "#8f8a69",
    "cyan": "#62897e",
    "foreground": "#6f6f5e",
    "green": "#6d8862",
    "magenta": "#957fb8",
    "red": "#c34043",
    "selectionBackground": "#8f8a6955",
    "white": "#8f8a69",
    "yellow": "#967f56",
  },
  "lavender@#203040": {
    "background": "#203040",
    "black": "#8a8592",
    "blue": "#3f8ccb",
    "brightBlack": "#867f94",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#d8525d",
    "brightWhite": "#807b8b",
    "brightYellow": "#9e8143",
    "cursor": "#8669c9",
    "cyan": "#348c97",
    "foreground": "#9c99a5",
    "green": "#648b49",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#8669c955",
    "white": "#837c8f",
    "yellow": "#a3813a",
  },
  "lavender@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#8a8592",
    "blue": "#3f8ccb",
    "brightBlack": "#867f94",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#d8525d",
    "brightWhite": "#2e2540",
    "brightYellow": "#9e8143",
    "cursor": "#7c5cc4",
    "cyan": "#348c97",
    "foreground": "#2e2540",
    "green": "#648b49",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#7c5cc455",
    "white": "#514961",
    "yellow": "#a3813a",
  },
  "marine@#203040": {
    "background": "#203040",
    "black": "#687b9a",
    "blue": "#4aa5f0",
    "brightBlack": "#8393ab",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#eeedf0",
    "brightYellow": "#f0c366",
    "cursor": "#ffd866",
    "cyan": "#42b3c2",
    "foreground": "#eeedf0",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#ffd86655",
    "white": "#c3c9d4",
    "yellow": "#d1a54b",
  },
  "marine@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#5b7091",
    "blue": "#3f8ccb",
    "brightBlack": "#79879d",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#848485",
    "brightYellow": "#9e8143",
    "cursor": "#9b843e",
    "cyan": "#3898a4",
    "foreground": "#666667",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#9b843e55",
    "white": "#81848c",
    "yellow": "#a3813a",
  },
  "mint@#203040": {
    "background": "#203040",
    "black": "#818e88",
    "blue": "#3f8ccb",
    "brightBlack": "#778a82",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#76827c",
    "brightYellow": "#9e8143",
    "cursor": "#1a8a64",
    "cyan": "#3898a4",
    "foreground": "#949d99",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#1a8a6455",
    "white": "#6b7b74",
    "yellow": "#a3813a",
  },
  "mint@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#818e88",
    "blue": "#3f8ccb",
    "brightBlack": "#778a82",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#1d3129",
    "brightYellow": "#9e8143",
    "cursor": "#1a8a64",
    "cyan": "#3898a4",
    "foreground": "#1d3129",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#1a8a6455",
    "white": "#41544d",
    "yellow": "#a3813a",
  },
  "mist@#203040": {
    "background": "#203040",
    "black": "#797978",
    "blue": "#3a81bb",
    "brightBlack": "#7b7b7d",
    "brightBlue": "#3382a8",
    "brightCyan": "#328a94",
    "brightGreen": "#648847",
    "brightMagenta": "#ad5ac7",
    "brightRed": "#d8525d",
    "brightWhite": "#7b7b7d",
    "brightYellow": "#91773e",
    "cursor": "#7c7c84",
    "cyan": "#348c97",
    "foreground": "#99999a",
    "green": "#648b49",
    "magenta": "#b25acc",
    "red": "#ce4e59",
    "selectionBackground": "#7c7c8455",
    "white": "#7b7b7d",
    "yellow": "#967735",
  },
  "mist@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#797978",
    "blue": "#3a81bb",
    "brightBlack": "#7b7b7d",
    "brightBlue": "#3382a8",
    "brightCyan": "#328a94",
    "brightGreen": "#648847",
    "brightMagenta": "#ad5ac7",
    "brightRed": "#d8525d",
    "brightWhite": "#26262a",
    "brightYellow": "#91773e",
    "cursor": "#4a4a52",
    "cyan": "#348c97",
    "foreground": "#26262a",
    "green": "#648b49",
    "magenta": "#b25acc",
    "red": "#ce4e59",
    "selectionBackground": "#4a4a5255",
    "white": "#48484b",
    "yellow": "#967735",
  },
  "monokai@#203040": {
    "background": "#203040",
    "black": "#7b7c7a",
    "blue": "#66d9ef",
    "brightBlack": "#807c6b",
    "brightBlue": "#66d9ef",
    "brightCyan": "#a1efe4",
    "brightGreen": "#a6e22e",
    "brightMagenta": "#ae81ff",
    "brightRed": "#f92672",
    "brightWhite": "#f9f8f5",
    "brightYellow": "#f4bf75",
    "cursor": "#f8f8f0",
    "cyan": "#a1efe4",
    "foreground": "#f8f8f2",
    "green": "#a6e22e",
    "magenta": "#ae81ff",
    "red": "#f92672",
    "selectionBackground": "#f8f8f055",
    "white": "#f8f8f2",
    "yellow": "#f4bf75",
  },
  "monokai@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#70716e",
    "blue": "#438f9d",
    "brightBlack": "#75715e",
    "brightBlue": "#438f9d",
    "brightCyan": "#62908b",
    "brightGreen": "#6e951e",
    "brightMagenta": "#936dd8",
    "brightRed": "#f92672",
    "brightWhite": "#8b8b88",
    "brightYellow": "#a17e4d",
    "cursor": "#8b8b85",
    "cyan": "#62908b",
    "foreground": "#6d6d69",
    "green": "#6e951e",
    "magenta": "#936dd8",
    "red": "#f92672",
    "selectionBackground": "#8b8b8555",
    "white": "#8b8b87",
    "yellow": "#a17e4d",
  },
  "moss@#203040": {
    "background": "#203040",
    "black": "#7b817b",
    "blue": "#4aa5f0",
    "brightBlack": "#808a7d",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#d8e4d2",
    "brightYellow": "#f0c366",
    "cursor": "#8cc07a",
    "cyan": "#42b3c2",
    "foreground": "#d8e4d2",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#8cc07a55",
    "white": "#b5c0b0",
    "yellow": "#d1a54b",
  },
  "moss@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#646a64",
    "blue": "#3f8ccb",
    "brightBlack": "#808a7d",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#848b80",
    "brightYellow": "#9e8143",
    "cursor": "#6d965f",
    "cyan": "#3898a4",
    "foreground": "#666d64",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#6d965f55",
    "white": "#838a7e",
    "yellow": "#a3813a",
  },
  "nord@#203040": {
    "background": "#203040",
    "black": "#7d838e",
    "blue": "#81a1c1",
    "brightBlack": "#7b7f89",
    "brightBlue": "#68809a",
    "brightCyan": "#6d96a5",
    "brightGreen": "#809575",
    "brightMagenta": "#957e95",
    "brightRed": "#a56f76",
    "brightWhite": "#aeb3bb",
    "brightYellow": "#b29e75",
    "cursor": "#d8dee9",
    "cyan": "#88c0d0",
    "foreground": "#d8dee9",
    "green": "#a3be8c",
    "magenta": "#b48ead",
    "red": "#bf616a",
    "selectionBackground": "#d8dee955",
    "white": "#e5e9f0",
    "yellow": "#ebcb8b",
  },
  "nord@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#7d838e",
    "blue": "#6d88a4",
    "brightBlack": "#7b7f89",
    "brightBlue": "#68809a",
    "brightCyan": "#648a98",
    "brightGreen": "#76896c",
    "brightMagenta": "#957e95",
    "brightRed": "#a56f76",
    "brightWhite": "#878c91",
    "brightYellow": "#978563",
    "cursor": "#84868e",
    "cyan": "#628a95",
    "foreground": "#66686f",
    "green": "#758864",
    "magenta": "#997992",
    "red": "#bf616a",
    "selectionBackground": "#84868e55",
    "white": "#808385",
    "yellow": "#9b855c",
  },
  "ocean@#203040": {
    "background": "#203040",
    "black": "#697c85",
    "blue": "#4aa5f0",
    "brightBlack": "#79949b",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#d3eef2",
    "brightYellow": "#f0c366",
    "cursor": "#5fd4e0",
    "cyan": "#42b3c2",
    "foreground": "#d3eef2",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#5fd4e055",
    "white": "#afcacf",
    "yellow": "#d1a54b",
  },
  "ocean@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#5c717a",
    "blue": "#3f8ccb",
    "brightBlack": "#6f888f",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#768487",
    "brightYellow": "#9e8143",
    "cursor": "#3f8c94",
    "cyan": "#3898a4",
    "foreground": "#646f72",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#3f8c9455",
    "white": "#738488",
    "yellow": "#a3813a",
  },
  "paper@#203040": {
    "background": "#203040",
    "black": "#8c8b85",
    "blue": "#3f8ccb",
    "brightBlack": "#86837d",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#7d7b78",
    "brightYellow": "#9e8143",
    "cursor": "#587bcb",
    "cyan": "#3898a4",
    "foreground": "#9a9996",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#587bcb55",
    "white": "#817d7b",
    "yellow": "#a3813a",
  },
  "paper@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#8c8b85",
    "blue": "#3f8ccb",
    "brightBlack": "#86837d",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#2a2620",
    "brightYellow": "#9e8143",
    "cursor": "#3a63c2",
    "cyan": "#3898a4",
    "foreground": "#2a2620",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#3a63c255",
    "white": "#4f4b45",
    "yellow": "#a3813a",
  },
  "peach@#203040": {
    "background": "#203040",
    "black": "#938780",
    "blue": "#3f8ccb",
    "brightBlack": "#948278",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#897d78",
    "brightYellow": "#9e8143",
    "cursor": "#c9632f",
    "cyan": "#348c97",
    "foreground": "#a39a96",
    "green": "#648b49",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#c9632f55",
    "white": "#84746d",
    "yellow": "#a3813a",
  },
  "peach@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#938780",
    "blue": "#3f8ccb",
    "brightBlack": "#948278",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#3e2a20",
    "brightYellow": "#9e8143",
    "cursor": "#c9632f",
    "cyan": "#348c97",
    "foreground": "#3e2a20",
    "green": "#648b49",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#c9632f55",
    "white": "#604d43",
    "yellow": "#a3813a",
  },
  "phosphor@#203040": {
    "background": "#203040",
    "black": "#748677",
    "blue": "#4aa5f0",
    "brightBlack": "#488a4f",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#7ef08a",
    "brightYellow": "#f0c366",
    "cursor": "#7ef08a",
    "cyan": "#42b3c2",
    "foreground": "#7ef08a",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#7ef08a55",
    "white": "#68c772",
    "yellow": "#d1a54b",
  },
  "phosphor@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#4d6350",
    "blue": "#3f8ccb",
    "brightBlack": "#488a4f",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#4c9154",
    "brightYellow": "#9e8143",
    "cursor": "#4c9154",
    "cyan": "#3898a4",
    "foreground": "#407a47",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#4c915455",
    "white": "#519b59",
    "yellow": "#a3813a",
  },
  "pitch@#203040": {
    "background": "#203040",
    "black": "#7e7d7b",
    "blue": "#4aa5f0",
    "brightBlack": "#837f78",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#efe7da",
    "brightYellow": "#f0c366",
    "cursor": "#ec9448",
    "cyan": "#42b3c2",
    "foreground": "#efe7da",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#ec944855",
    "white": "#c4bdb3",
    "yellow": "#d1a54b",
  },
  "pitch@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#5a5957",
    "blue": "#3f8ccb",
    "brightBlack": "#837f78",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#848279",
    "brightYellow": "#9e8143",
    "cursor": "#b87338",
    "cyan": "#3898a4",
    "foreground": "#6f6e66",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#b8733855",
    "white": "#8d8781",
    "yellow": "#a3813a",
  },
  "plum@#203040": {
    "background": "#203040",
    "black": "#827b87",
    "blue": "#4aa5f0",
    "brightBlack": "#8d8298",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#e9ddf5",
    "brightYellow": "#f0c366",
    "cursor": "#c792ea",
    "cyan": "#42b3c2",
    "foreground": "#e9ddf5",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#c792ea55",
    "white": "#c4b8d0",
    "yellow": "#d1a54b",
  },
  "plum@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#6b6472",
    "blue": "#3f8ccb",
    "brightBlack": "#8d8298",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#8e8594",
    "brightYellow": "#9e8143",
    "cursor": "#9b71b6",
    "cyan": "#3898a4",
    "foreground": "#6f6773",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#9b71b655",
    "white": "#8d8495",
    "yellow": "#a3813a",
  },
  "prism@#203040": {
    "background": "#203040",
    "black": "#79797b",
    "blue": "#4aa5f0",
    "brightBlack": "#84848a",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#e7e7ee",
    "brightYellow": "#f0c366",
    "cursor": "#7c7cf0",
    "cyan": "#42b3c2",
    "foreground": "#e7e7ee",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#7c7cf055",
    "white": "#bfbfc6",
    "yellow": "#d1a54b",
  },
  "prism@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#606064",
    "blue": "#3f8ccb",
    "brightBlack": "#84848a",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#828284",
    "brightYellow": "#9e8143",
    "cursor": "#7c7cf0",
    "cyan": "#3898a4",
    "foreground": "#6e6e6f",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#7c7cf055",
    "white": "#89898e",
    "yellow": "#a3813a",
  },
  "pt-default@#203040": {
    "background": "#203040",
    "black": "#7b7b7b",
    "blue": "#5da9f6",
    "brightBlack": "#777777",
    "brightBlue": "#a5c7ff",
    "brightCyan": "#b7fff9",
    "brightGreen": "#ddf88f",
    "brightMagenta": "#ddaaff",
    "brightRed": "#f58c80",
    "brightWhite": "#ffffff",
    "brightYellow": "#eee5b2",
    "cursor": "#bbbbbb",
    "cyan": "#82fff7",
    "foreground": "#dedacf",
    "green": "#b1e969",
    "magenta": "#e86aff",
    "red": "#ff615a",
    "selectionBackground": "#bbbbbb55",
    "white": "#dedacf",
    "yellow": "#ebd99c",
  },
  "pt-default@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#646464",
    "blue": "#4f8fd0",
    "brightBlack": "#6b6b6b",
    "brightBlue": "#6d84a8",
    "brightCyan": "#668f8b",
    "brightGreen": "#7a8b4f",
    "brightMagenta": "#9e79b7",
    "brightRed": "#be6d64",
    "brightWhite": "#848484",
    "brightYellow": "#908b6d",
    "cursor": "#858585",
    "cyan": "#498f8a",
    "foreground": "#686662",
    "green": "#6c8e3f",
    "magenta": "#c45ad8",
    "red": "#eb5953",
    "selectionBackground": "#85858555",
    "white": "#86847d",
    "yellow": "#8f845e",
  },
  "retro@#203040": {
    "background": "#203040",
    "black": "#8881b4",
    "blue": "#4aa5f0",
    "brightBlack": "#857cc0",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#b3adf0",
    "brightYellow": "#f0c366",
    "cursor": "#b3adf0",
    "cyan": "#42b3c2",
    "foreground": "#b3adf0",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#b3adf055",
    "white": "#9c95db",
    "yellow": "#d1a54b",
  },
  "retro@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#8881b4",
    "blue": "#3f8ccb",
    "brightBlack": "#857cc0",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#817bac",
    "brightYellow": "#9e8143",
    "cursor": "#817bac",
    "cyan": "#3898a4",
    "foreground": "#6d6891",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#817bac55",
    "white": "#847eb9",
    "yellow": "#a3813a",
  },
  "rosewood@#203040": {
    "background": "#203040",
    "black": "#867c82",
    "blue": "#4aa5f0",
    "brightBlack": "#95838b",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#f2dce5",
    "brightYellow": "#f0c366",
    "cursor": "#ee85aa",
    "cyan": "#42b3c2",
    "foreground": "#f2dce5",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#ee85aa55",
    "white": "#cdb8c1",
    "yellow": "#d1a54b",
  },
  "rosewood@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#71656b",
    "blue": "#3f8ccb",
    "brightBlack": "#95838b",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#93848b",
    "brightYellow": "#9e8143",
    "cursor": "#c97090",
    "cyan": "#3898a4",
    "foreground": "#72666d",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#c9709055",
    "white": "#93848b",
    "yellow": "#a3813a",
  },
  "sage@#203040": {
    "background": "#203040",
    "black": "#848983",
    "blue": "#3f8ccb",
    "brightBlack": "#7c867b",
    "brightBlue": "#378db7",
    "brightCyan": "#328a94",
    "brightGreen": "#648847",
    "brightMagenta": "#bc62d8",
    "brightRed": "#d8525d",
    "brightWhite": "#7a827b",
    "brightYellow": "#9e8143",
    "cursor": "#5a8756",
    "cyan": "#348c97",
    "foreground": "#989d99",
    "green": "#648b49",
    "magenta": "#b25acc",
    "red": "#e05561",
    "selectionBackground": "#5a875655",
    "white": "#7b847b",
    "yellow": "#a3813a",
  },
  "sage@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#848983",
    "blue": "#3f8ccb",
    "brightBlack": "#7c867b",
    "brightBlue": "#378db7",
    "brightCyan": "#328a94",
    "brightGreen": "#648847",
    "brightMagenta": "#bc62d8",
    "brightRed": "#d8525d",
    "brightWhite": "#223024",
    "brightYellow": "#9e8143",
    "cursor": "#4c7d47",
    "cyan": "#348c97",
    "foreground": "#223024",
    "green": "#648b49",
    "magenta": "#b25acc",
    "red": "#e05561",
    "selectionBackground": "#4c7d4755",
    "white": "#465247",
    "yellow": "#a3813a",
  },
  "sky@#203040": {
    "background": "#203040",
    "black": "#848b92",
    "blue": "#3f8ccb",
    "brightBlack": "#798592",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#757e86",
    "brightYellow": "#9e8143",
    "cursor": "#2f7bd6",
    "cyan": "#3898a4",
    "foreground": "#939ba1",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#2f7bd655",
    "white": "#77818b",
    "yellow": "#a3813a",
  },
  "sky@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#848b92",
    "blue": "#3f8ccb",
    "brightBlack": "#798592",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#1c2b3a",
    "brightYellow": "#9e8143",
    "cursor": "#2f7bd6",
    "cyan": "#3898a4",
    "foreground": "#1c2b3a",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#2f7bd655",
    "white": "#414f5d",
    "yellow": "#a3813a",
  },
  "solarized-dark@#203040": {
    "background": "#203040",
    "black": "#68868d",
    "blue": "#268bd2",
    "brightBlack": "#71858a",
    "brightBlue": "#6c9fd8",
    "brightCyan": "#93a1a1",
    "brightGreen": "#93a1a1",
    "brightMagenta": "#6c71c4",
    "brightRed": "#cf5929",
    "brightWhite": "#fdf6e3",
    "brightYellow": "#839496",
    "cursor": "#93a1a1",
    "cyan": "#2aa198",
    "foreground": "#93a1a1",
    "green": "#859900",
    "magenta": "#d7468c",
    "red": "#df4240",
    "selectionBackground": "#93a1a155",
    "white": "#eee8d5",
    "yellow": "#b58900",
  },
  "solarized-dark@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#5b7b83",
    "blue": "#268bd2",
    "brightBlack": "#657a80",
    "brightBlue": "#5b86b7",
    "brightCyan": "#7c8888",
    "brightGreen": "#7c8888",
    "brightMagenta": "#6c71c4",
    "brightRed": "#cb4b16",
    "brightWhite": "#8e897f",
    "brightYellow": "#79888a",
    "cursor": "#7c8888",
    "cyan": "#27948c",
    "foreground": "#616a6a",
    "green": "#7a8d00",
    "magenta": "#d33682",
    "red": "#dc322f",
    "selectionBackground": "#7c888855",
    "white": "#848278",
    "yellow": "#a77e00",
  },
  "synthwave@#203040": {
    "background": "#203040",
    "black": "#7b7b86",
    "blue": "#03edf9",
    "brightBlack": "#8a7ab5",
    "brightBlue": "#03edf9",
    "brightCyan": "#03edf9",
    "brightGreen": "#72f1b8",
    "brightMagenta": "#ff7edb",
    "brightRed": "#fe4450",
    "brightWhite": "#ffffff",
    "brightYellow": "#fede5d",
    "cursor": "#ff7edb",
    "cyan": "#03edf9",
    "foreground": "#f0eff1",
    "green": "#72f1b8",
    "magenta": "#ff7edb",
    "red": "#fe4450",
    "selectionBackground": "#ff7edb55",
    "white": "#ffffff",
    "yellow": "#fede5d",
  },
  "synthwave@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#706f7b",
    "blue": "#039097",
    "brightBlack": "#8a7ab5",
    "brightBlue": "#039097",
    "brightCyan": "#039097",
    "brightGreen": "#45926f",
    "brightMagenta": "#c762aa",
    "brightRed": "#fe4450",
    "brightWhite": "#848484",
    "brightYellow": "#9a8639",
    "cursor": "#c762aa",
    "cyan": "#039097",
    "foreground": "#676668",
    "green": "#45926f",
    "magenta": "#c762aa",
    "red": "#fe4450",
    "selectionBackground": "#c762aa55",
    "white": "#848484",
    "yellow": "#9a8639",
  },
  "tokyonight@#203040": {
    "background": "#203040",
    "black": "#7c7c82",
    "blue": "#7aa2f7",
    "brightBlack": "#777b92",
    "brightBlue": "#7aa2f7",
    "brightCyan": "#7dcfff",
    "brightGreen": "#9ece6a",
    "brightMagenta": "#bb9af7",
    "brightRed": "#f7768e",
    "brightWhite": "#c0caf5",
    "brightYellow": "#e0af68",
    "cursor": "#c0caf5",
    "cyan": "#7dcfff",
    "foreground": "#c0caf5",
    "green": "#9ece6a",
    "magenta": "#bb9af7",
    "red": "#f7768e",
    "selectionBackground": "#c0caf555",
    "white": "#a9b1d6",
    "yellow": "#e0af68",
  },
  "tokyonight@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#717177",
    "blue": "#6789d1",
    "brightBlack": "#6b7089",
    "brightBlue": "#6789d1",
    "brightCyan": "#5388a8",
    "brightGreen": "#70944c",
    "brightMagenta": "#9179c0",
    "brightRed": "#d16479",
    "brightWhite": "#7f84a1",
    "brightYellow": "#a17d4b",
    "cursor": "#7f84a1",
    "cyan": "#5388a8",
    "foreground": "#63667d",
    "green": "#70944c",
    "magenta": "#9179c0",
    "red": "#d16479",
    "selectionBackground": "#7f84a155",
    "white": "#848aa7",
    "yellow": "#a17d4b",
  },
  "umber@#203040": {
    "background": "#203040",
    "black": "#7f7871",
    "blue": "#4aa5f0",
    "brightBlack": "#938676",
    "brightBlue": "#4dc4ff",
    "brightCyan": "#4cd1e0",
    "brightGreen": "#a5e075",
    "brightMagenta": "#de73ff",
    "brightRed": "#ff616e",
    "brightWhite": "#e8d8c0",
    "brightYellow": "#f0c366",
    "cursor": "#d9b38c",
    "cyan": "#42b3c2",
    "foreground": "#e8d8c0",
    "green": "#8cc265",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#d9b38c55",
    "white": "#c6b7a2",
    "yellow": "#d1a54b",
  },
  "umber@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#746c65",
    "blue": "#3f8ccb",
    "brightBlack": "#938676",
    "brightBlue": "#378db7",
    "brightCyan": "#3696a1",
    "brightGreen": "#6d944d",
    "brightMagenta": "#bc62d8",
    "brightRed": "#eb5965",
    "brightWhite": "#8d8475",
    "brightYellow": "#9e8143",
    "cursor": "#9b8164",
    "cyan": "#3898a4",
    "foreground": "#6e665b",
    "green": "#6d974f",
    "magenta": "#c162de",
    "red": "#e05561",
    "selectionBackground": "#9b816455",
    "white": "#8e8474",
    "yellow": "#a3813a",
  },
  "volt@#203040": {
    "background": "#203040",
    "black": "#7c837a",
    "blue": "#38b6ff",
    "brightBlack": "#77806f",
    "brightBlue": "#7cd0ff",
    "brightCyan": "#78ffe8",
    "brightGreen": "#e2ff5c",
    "brightMagenta": "#ff8ae5",
    "brightRed": "#ff7088",
    "brightWhite": "#ffffff",
    "brightYellow": "#fbff9a",
    "cursor": "#d8ff26",
    "cyan": "#22f0d0",
    "foreground": "#eef2e6",
    "green": "#c6f41f",
    "magenta": "#ff4fd8",
    "red": "#ff3b5c",
    "selectionBackground": "#d8ff2655",
    "white": "#d9dfd0",
    "yellow": "#f4ff52",
  },
  "volt@#f4f1ea": {
    "background": "#f4f1ea",
    "black": "#585f53",
    "blue": "#2c8ec7",
    "brightBlack": "#6b7562",
    "brightBlue": "#5289a8",
    "brightCyan": "#438f82",
    "brightGreen": "#7e8f34",
    "brightMagenta": "#b763a4",
    "brightRed": "#d85f73",
    "brightWhite": "#848484",
    "brightYellow": "#8d8f56",
    "cursor": "#798f15",
    "cyan": "#15917e",
    "foreground": "#666964",
    "green": "#799413",
    "magenta": "#d843b7",
    "red": "#ff3b5c",
    "selectionBackground": "#798f1555",
    "white": "#84877e",
    "yellow": "#888f2d",
  },
}
`;
